--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -34,8 +34,7 @@
   
   <div class="empty_cart" *ngIf = 'emptyCart'>
     <div class="empty_cart_text">Your cart is currently empty.</div>
-    <a><button type="button" class="btn btn-dark empty_cart_button">RETUN TO SHOP</button></a>
+    <a routerLink="/shop"><button type="button" class="btn btn-dark empty_cart_button">RETUN TO SHOP</button></a>
   </div>
-
-
+<app-footer></app-footer>
 </div>    
