--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -124,3 +124,15 @@
    font-weight: 700;
    font-size: 1.2rem;
  }
+
+ .checkout {
+   font-size: 12px;
+    line-height: 1;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    background-color: #262526;
+    color: white;
+    transition: all .15s;
+    border-radius: 3px;
+ }
