--- a/src/app/components/checkout/checkout.component.css
+++ b/src/app/components/checkout/checkout.component.css
@@ -9,8 +9,33 @@
 .home {
   height: 360px;
   width: 100%;
-  background-image: url('https://cdn.demos.pixelgrade.com/wp-content/uploads/sites/5/2014/05/holiday2013_front.jpg');
+  background-image: url('https://cdn.demos.pixelgrade.com/wp-content/uploads/sites/5/2014/06/shop-featured1.jpg');
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
 }
+
+.brand_name {
+    height: 380px;
+    margin-left: 30px;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  }
+
+  .brand_name_contain_name {
+      letter-spacing: 9.4px;
+      color: white;
+      font-weight: 900;
+      font-size: 47px;
+      margin-top: -60px;
+  }
+
+  .details {
+    margin-top: 80px;
+    padding-left: 80px;
+    padding-right: 80px;
+  }
