--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -11,27 +11,41 @@
        <div class="address">
         <form>
          <div class="row">
-           
-             <div class="col-6">
-                 <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+      <!--------------------------------------------------------------------------------------------------------------------------->     
+            <div class="col-6">
+              <div class="row">
+                <!---------------------------------------------------------------------------------------------------------------> 
+                  <div class="col-6">
+                     <div class="form-group">
+                     <label for="exampleInputEmail1">First name&nbsp;  
+                       <abbr class="required" title="required">*</abbr>
+                     </label>
+                     <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                     </div>    
+                  </div>
+                  
+                  <div class="col-6">
+                     <div class="form-group">
+                     <label for="exampleInputEmail1">Last name&nbsp;
+                      <abbr class="required" title="required">*</abbr> 
+                     </label>
+                     <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                     </div>    
+                  </div>
+                  <!--------------------------------------------------------------------------------------------------------------->     
+              </div>
+              <div class="form-group">
+               <label for="exampleInputEmail1">Company name(optional)</label>
+               <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
              </div>
+             
+             <button type="submit" class="btn btn-primary">Submit</button>
+             </div>
+     <!--------------------------------------------------------------------------------------------------------------------------->       
              <div class="col-6">
 
              </div>
-           
+      <!--------------------------------------------------------------------------------------------------------------------------->     
          </div>
          </form>
        </div>
